# abk_epr

./: .codecov.yml  .gitignore  .python-version  LICENSE  Makefile  Pipfile  README.md  README.rst  exif_rename.py  logging.yaml  phonebook.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup_py.txt
.github/workflows/: pipeline.yml
spikes/src/: phonebook.py
spikes/tests/: context.py  test_phonebook.py  test_wallet.py
src/: abk_epr.py  exif_rename.py  logging.conf  logging.yaml  main.py  phonebook.py  requirements_dev.txt
src/abk_epr/: __init__.py  abk_common.py  cli.py  clo.py  constants.py  epr.py  logger_manager.py
tests/: context.py  test_abk_epr.py  test_clo.py  test_epr.py  test_epr.py.txt  test_exif_rename.py  test_main.py  test_phonebook.py  test_square.py
